# uclv-rh8d-ros2-tests

./: CMakeLists.txt  README.md  README_test_MoveFingerMotor.md  package.xml
.github/workflows/: main.yaml  main.yml
README/: README_test_moveFingerMotor.md
launch/: test.launch.py
src/: sin_generator_node.cpp  sin_node.cpp  test_moveFingerMotor.cpp  test_moveMotors.cpp  test_moveWristMotor.cpp  test_readFingerMotorPosition.cpp  test_readFingerMotorPosition.cpp.cpp  test_readFromSensors.cpp  test_readMotorsPositions.cpp  test_readWristMotorPosition.cpp
